--- a/StoryGenixApp/Info.plist
+++ b/StoryGenixApp/Info.plist
@@ -15,5 +15,12 @@
 			</array>
 		</dict>
 	</array>
+	<key>GIDClientID</key>
+	<string>594736554199-csrj02rfhi8nr6jap1opd80hh2dsnlak.apps.googleusercontent.com</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
